--- a/themes/default/partials/allpublications.htm
+++ b/themes/default/partials/allpublications.htm
@@ -32,11 +32,12 @@
       </div>
       <div class="publicacion">
           <h6 class="publi-title">{{publication.viewBag.title}}</h6>
-          <img class="publi-icon" src="{{preurl}}/storage/app/media/uploaded-files/templates/pb1-icon.svg" alt="">
-          <span>{{publication.viewBag.type|_}}</span>
-          <img class="publi-icon par" src="{{preurl}}/storage/app/media/uploaded-files/templates/pb2-icon.svg" alt="">
-          <span>{{publication.viewBag.interests|replace({ ',': ' Y '})|_}}</span>
-          <br>
+          <div>
+            <img class="publi-icon" src="{{preurl}}/storage/app/media/uploaded-files/templates/pb1-icon.svg" alt="">
+            <span>{{publication.viewBag.type|_}}</span>
+            <img class="publi-icon par" src="{{preurl}}/storage/app/media/uploaded-files/templates/pb2-icon.svg" alt="">
+            <span>{{publication.viewBag.interests|replace({ ',': ' Y '})|_}}</span>
+          </div>
           <img class="publi-icon" src="{{preurl}}/storage/app/media/uploaded-files/templates/pb3-icon.svg" alt="">
           <div class="contplangs">
             <span>{{publication.viewBag.idiomas|replace({ ',': ', '})}}</span>
