--- a/themes/default/partials/reports.htm
+++ b/themes/default/partials/reports.htm
@@ -13,7 +13,33 @@
 
 ?>
 
-==
+== 
+
+<div class="cntreports">
+	<div class="gr gr1">
+		<div class="rprtc1" style="background-image: url(/cadizturismo/storage/app/media/uploaded-files/templates/reportexp.jpg);">1</div>
+		<div class="rprtc2">
+			<div class="rprtc2 rpart1" style="background-image: url(/cadizturismo/storage/app/media/uploaded-files/templates/reportexp.jpg);">2.1</div>
+			<div class="rprtc2 rpart2">2.2</div>
+		</div>
+	</div>
+	<div class="gr gr2">
+		<div class="rprtc3">
+			<div class="rprtc3 rpart1" style="background-image: url(/cadizturismo/storage/app/media/uploaded-files/templates/reportexp.jpg);">3.1</div>
+			<div class="rprtc3 rpart2">3.2</div>
+		</div>
+		<div class="rprtc4" style="background-image: url(/cadizturismo/storage/app/media/uploaded-files/templates/reportexp.jpg);">4</div>
+	</div>
+	<div class="gr gr3">
+		<div class="rprtc5">5</div>
+		<div class="rprtc6">
+			<div class="rprtc6 rpart1" style="background-image: url(/cadizturismo/storage/app/media/uploaded-files/templates/reportexp.jpg);">6.1</div>
+			<div class="rprtc6 rpart2">6.2</div>
+		</div>
+	</div>
+</div>
+
+<!--
 {% if reports|length > 0 %}
 <div class="publis">
 	{% for report in reports %}
@@ -34,7 +60,7 @@
 
 <div class="mock-space-prensa">
 	<p>Vuelve más tarde, tendremos un montón de reportajes para ti.</p>
-</div>
+</div> 
 
 
-{% endif %}
+{% endif %} -->
