--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -4018,8 +4018,7 @@ p > br {
   background-image: url("../img/publicaciones.jpg");
   transform: rotate(0deg);
   }
-  
-  
+
   .header-publications h1{
     margin-left: -110px;
     margin-top: -200px!important;
@@ -4520,3 +4519,118 @@ p > br {
     left: 3% !important; }
   .mimgb {
     margin-bottom: 70px; } }
+
+
+/* **************************************************************************** */
+/* **************************************************************************** */
+/* **************************************************************************** */
+/* Andrés Martínez SALA PRENSA */
+/* **************************************************************************** */
+/* **************************************************************************** */
+/* **************************************************************************** */
+.header-salaprensa{
+    background-image: url("../img/salaprensa.jpg");
+    transform: rotate(0deg);
+  }
+
+.header-salaprensa:before {
+    z-index: 2;
+    content: '';
+    top: 0;
+    bottom: -10.7vw;
+    right: 0;
+    left: 0;
+    position: absolute;
+    background: url(../svg/oval-pub.svg) no-repeat center bottom -1px;
+    background-size: contain;
+}
+.cntreports{
+  margin: 0 auto;
+  width: 1440px;
+  height: 1220px;
+  display: grid;
+  display: -ms-grid;
+  grid-template-columns: repeat(3, 434px);
+  -ms-grid-template-columns: repeat(3, 434px);
+  color: white;
+  font-size: 16px;
+}
+.cntreports .gr div{
+  width: 434px;
+}
+.cntreports .gr1{
+  padding-top:100px;
+}
+.cntreports .gr .rprtc1{
+  padding:15px;
+  height: 511px;
+  
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.cntreports .gr .rprtc2{
+  height: 594px;
+}
+.cntreports .gr .rprtc3{
+  height: 516px;
+}
+.cntreports .gr .rprtc4{
+  padding:15px;
+  height: 592px;
+  
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.cntreports .gr .rprtc5{
+  padding:0 15px;
+  height: 300px;
+  
+}
+.cntreports .rprtc6{
+  height: 594px;
+}
+
+.cntreports .gr .rprtc2 .rpart1{
+  padding:15px;
+  
+  height: 370px;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.cntreports .gr .rprtc2 .rpart2{
+  color: #9B9B9B;
+  padding:15px;
+  
+  height: 224px;
+  background-color: white;
+}
+
+.cntreports .gr .rprtc3 .rpart1{
+  padding:15px;
+  
+  height: 370px;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.cntreports .gr .rprtc3 .rpart2{
+  color: #9B9B9B;
+  padding:15px;
+  
+  height: 146px;
+  background-color: white;
+}
+
+.cntreports .gr .rprtc6 .rpart1{
+  padding:15px;
+  
+  height: 370px;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.cntreports .gr .rprtc6 .rpart2{
+  color: #9B9B9B;
+  padding:15px;
+  
+  height: 224px;
+  background-color: white;
+}
