--- a/themes/default/partials/site/footer.htm
+++ b/themes/default/partials/site/footer.htm
@@ -1,10 +1,11 @@
+[staticApp]
 ==
 
 <?php
 
   function onStart()
   {
-    $this['home'] = $this->staticApp->getHomeVars();
+    //$this['home'] = $this->staticApp->getHomeVars();
   }
 
 ?>
