--- a/themes/default/layouts/experience.htm
+++ b/themes/default/layouts/experience.htm
@@ -78,13 +78,16 @@ code = "redes-sociales"
         }
 
         $this['experience'] = $this->staticApp->experienceFindByUrl($this->page->url);
+        $intrs =  $this->staticApp->getInteresesById(str_slug($this['experience'][0]['interest'],'-'));
 
-        $intrs =  $this->staticApp->getInteresesById($this['experience'][0]['interest']);
-        $this['intrs1'] = $intrs[0];
+        if(isset($intrs[0])){
+         $this['intrs1'] = $intrs[0];
+        }
+        if(isset($intrs[1])){
         $this['intrs2'] = $intrs[1];
+        }
 
-        $this['stvisit'] = $this->staticApp->getTvisitaById($this['experience'][0]['tvisit']);
-
+        $this['stvisit'] = $this->staticApp->getTvisitaById(str_slug($this['experience'][0]['tvisit'].'-'));
     }
 
     function onMailExperience(){
