--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -1832,6 +1832,20 @@ html, body {
 
 #prtlPublicationsl{
   margin-top: 100px!important;
+  background-color:#F4F4F4;
+}
+
+#prtlPublicationsl .mock-space-prensa{
+  background-color:#F4F4F4;
+  margin-top: -98px!important;
+}
+
+#prtlPublicationsl .mock-space-prensa p{
+  font-size: 16px;
+}
+
+#publicacion-type, #publicacion-interests, #publicacion-langs {
+  border-bottom: none!important;
 }
 
 .header-publications-min{
@@ -4020,11 +4034,12 @@ p > br {
   }
 
   .header-publications h1{
-    margin-left: -110px;
     margin-top: -200px!important;
     margin-bottom: -40px!important;
   }
-
+  .header-publications h1 span{
+    font-size: 200px!important;
+  }
   .header-publications-min h1{
     margin-left: 0px;
     margin-top: -60px!important;
