--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -4040,6 +4040,10 @@ p > br {
   .header-publications h1 span{
     font-size: 200px!important;
   }
+  .header-publications .brush{
+     margin-top: -180px;
+  }
+
   .header-publications-min h1{
     margin-left: 0px;
     margin-top: -60px!important;
