--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -4040,7 +4040,7 @@ p > br {
   .header-publications h1 span{
     font-size: 200px!important;
   }
-  .header-publications .brush{
+  .header-publications .header-txt .brush{
      margin-top: -180px;
   }
 
