--- a/themes/default/partials/publications.htm
+++ b/themes/default/partials/publications.htm
@@ -53,7 +53,7 @@
             <span>{{publication.viewBag.idiomas|replace({ ',': ', '})}}</span>
           </div>
        
-        <p class="publi-desc">{{publication.viewBag.descrptn|length > 150 ? publication.viewBag.descrptn|slice(0, 150) ~ '...' : publication.viewBag.descrptn}}</p>
+        <p class="publi-desc">{{publication.viewBag.descrptn}}</p>
        
           
       </div>
