--- a/themes/default/partials/allpublications.htm
+++ b/themes/default/partials/allpublications.htm
@@ -43,7 +43,7 @@
             <span>{{publication.viewBag.idiomas|replace({ ',': ', '})}}</span>
           </div>
        
-        <p class="publi-desc">{{publication.viewBag.descrptn|length > 120 ? publication.viewBag.descrptn|slice(0, 120) ~ '...' : publication.viewBag.descrptn}}</p>
+        <p class="publi-desc">{{publication.viewBag.descrptn}}</p>
        
           
       </div>
