--- a/modules/backend/assets/css/october.css
+++ b/modules/backend/assets/css/october.css
@@ -5334,7 +5334,7 @@ table.name-value-list > a:hover, table.name-value-list > a:focus, table.name-val
 #layout-body .tab-pane .custom-select + .select2 {
   background-color: #175DA3;
   border-radius: 0px !important;
-  height: 50px !important; }
+  min-height: 50px !important; }
 
 #layout-body .tab-pane .select2-selection__rendered {
   padding-left: 0px !important;
