--- a/themes/default/partials/allpublications.htm
+++ b/themes/default/partials/allpublications.htm
@@ -26,10 +26,13 @@
            {% if publication.viewBag.urlExternaVideo !='' %}
             <a class="see-link" target="_blank" href="{{publication.viewBag.urlExternaVideo}}">{{'Ver'|_}} {{publication.viewBag.type|_}} </a>
           {% endif %}
-        </div> 
-        <img class ="shr" src="{{preurl}}/storage/app/media/uploaded-files/templates/shr.svg" alt="">   
+        </div>
+      </div>
+      <div class="shr">
+        <img src="{{preurl}}/storage/app/media/uploaded-files/templates/shr.svg" alt=""> 
       </div>
       <div class="publicacion">
+        
           <h6 class="publi-title">{{publication.viewBag.title}}</h6>
           <div>
             <img class="publi-icon" src="{{preurl}}/storage/app/media/uploaded-files/templates/pb1-icon.svg" alt="">
