--- a/themes/default/partials/reports.htm
+++ b/themes/default/partials/reports.htm
@@ -9,6 +9,11 @@
 	    } else {
 	     	$this['preurl'] = '';
 	    }
+
+	    $this['lang']=\App::getLocale();
+		if($this['lang']==''){
+			$this['lang']='es';
+		}
 	}
 
 ?>
@@ -18,34 +23,38 @@
 <div class="cntreports">
 	{% if(reports[0]) %}
 		<div class="gr gr1">
-		{% if(reports[0]) %}
+		{% if(reports[0]) %}			
 			<div class="rprtc1" style="background-image: url({{reports[0].viewBag.cover}});">
-				<div class="rprInfCont">
-					{% set dated = reports[0].viewBag.dateReportaje|split(' ')[0] %}
-					{% set datef = dated|split('-') %}
-					<span class='reportDate'>{{datef[2]}}.{{datef[1]}}.{{datef[0]|slice(2,2)}}</span>
-					<span class='reportTitle'>{{reports[0].viewBag.title}}</span>
-					<img src="/cadizturismo/storage/app/media/uploaded-files/templates/reportlineyellow.png" alt="">
-					<span class='reportDescrptn'>{{reports[0].viewBag.descrptn|length > 114 ? reports[0].viewBag.descrptn|slice(0, 115) ~ '...' : reports[0].viewBag.descrptn}}</span>
-				</div>
-			</div>
+				<a href='{{preurl~"/"~lang~reports[0].viewBag.url}}'>
+					<div class="rprInfCont">
+						{% set dated = reports[0].viewBag.dateReportaje|split(' ')[0] %}
+						{% set datef = dated|split('-') %}
+						<span class='reportDate'>{{datef[2]}}.{{datef[1]}}.{{datef[0]|slice(2,2)}}</span>
+						<span class='reportTitle'>{{reports[0].viewBag.title}}</span>
+						<img src="/cadizturismo/storage/app/media/uploaded-files/templates/reportlineyellow.png" alt="">
+						<span class='reportDescrptn'>{{reports[0].viewBag.descrptn|length > 114 ? reports[0].viewBag.descrptn|slice(0, 115) ~ '...' : reports[0].viewBag.descrptn}}</span>
+					</div>
+				</a>
+			</div>			
 		{% endif %}
 		{% if(reports[1]) %}
 		<div class="rprtc2">
-			<div class="rprtc2 rpart1" style="background-image: url({{reports[1].viewBag.cover}});">
-				<div class="rprInfCont">
-					{% set dated = reports[1].viewBag.dateReportaje|split(' ')[0] %}
-					{% set datef = dated|split('-') %}
-					<span class='reportDate'>{{datef[2]}}.{{datef[1]}}.{{datef[0]|slice(2,2)}}</span>
-					<span class='reportTitle'>{{reports[1].viewBag.title}}</span>
-					<img src="/cadizturismo/storage/app/media/uploaded-files/templates/reportlineyellow.png" alt="">
+			<a href='{{preurl~"/"~lang~reports[1].viewBag.url}}'>
+				<div class="rprtc2 rpart1" style="background-image: url({{reports[1].viewBag.cover}});">
+					<div class="rprInfCont">
+						{% set dated = reports[1].viewBag.dateReportaje|split(' ')[0] %}
+						{% set datef = dated|split('-') %}
+						<span class='reportDate'>{{datef[2]}}.{{datef[1]}}.{{datef[0]|slice(2,2)}}</span>
+						<span class='reportTitle'>{{reports[1].viewBag.title}}</span>
+						<img src="/cadizturismo/storage/app/media/uploaded-files/templates/reportlineyellow.png" alt="">
+					</div>
 				</div>
-			</div>
-			<div class="rprtc2 rpart2">
-				<div class="rprInfCont">
-					<span class='reportDescrptn'>{{reports[1].viewBag.descrptn|length > 250 ? reports[1].viewBag.descrptn|slice(0, 251) ~ '...' : reports[1].viewBag.descrptn}}</span>
+				<div class="rprtc2 rpart2">
+					<div class="rprInfCont">
+						<span class='reportDescrptn'>{{reports[1].viewBag.descrptn|length > 250 ? reports[1].viewBag.descrptn|slice(0, 251) ~ '...' : reports[1].viewBag.descrptn}}</span>
+					</div>
 				</div>
-			</div>
+			</a>
 		</div>
 		{% endif %}
 		</div>
@@ -54,56 +63,70 @@
 		<div class="gr gr2">
 		{% if(reports[2]) %}
 			<div class="rprtc3">
-				<div class="rprtc3 rpart1" style="background-image: url({{reports[2].viewBag.cover}});">
-					<div class="rprInfCont">
-						{% set dated = reports[2].viewBag.dateReportaje|split(' ')[0] %}
-						{% set datef = dated|split('-') %}
-						<span class='reportDate'>{{datef[2]}}.{{datef[1]}}.{{datef[0]|slice(2,2)}}</span>
-						<span class='reportTitle'>{{reports[2].viewBag.title}}</span>
-						<img src="/cadizturismo/storage/app/media/uploaded-files/templates/reportlineyellow.png" alt="">
+				<a href='{{preurl~"/"~lang~reports[2].viewBag.url}}'>
+					<div class="rprtc3 rpart1" style="background-image: url({{reports[2].viewBag.cover}});">
+						<div class="rprInfCont">
+							{% set dated = reports[2].viewBag.dateReportaje|split(' ')[0] %}
+							{% set datef = dated|split('-') %}
+							<span class='reportDate'>{{datef[2]}}.{{datef[1]}}.{{datef[0]|slice(2,2)}}</span>
+							<span class='reportTitle'>{{reports[2].viewBag.title}}</span>
+							<img src="/cadizturismo/storage/app/media/uploaded-files/templates/reportlineyellow.png" alt="">
+						</div>
 					</div>
-				</div>
-				<div class="rprtc3 rpart2">
-					<div class="rprInfCont">
-						<span class='reportDescrptn'>{{reports[2].viewBag.descrptn|length > 105 ? reports[2].viewBag.descrptn|slice(0, 106) ~ '...' : reports[2].viewBag.descrptn}}</span>
+					<div class="rprtc3 rpart2">
+						<div class="rprInfCont">
+							<span class='reportDescrptn'>{{reports[2].viewBag.descrptn|length > 105 ? reports[2].viewBag.descrptn|slice(0, 106) ~ '...' : reports[2].viewBag.descrptn}}</span>
+						</div>
 					</div>
-				</div>
+				</a>
 			</div>
 		{% endif %}
 		{% if(reports[3]) %}
 			<div class="rprtc4" style="background-image: url({{reports[3].viewBag.cover}});">
-				<div class="rprInfCont">
-					{% set dated = reports[3].viewBag.dateReportaje|split(' ')[0] %}
-					{% set datef = dated|split('-') %}
-					<span class='reportDate'>{{datef[2]}}.{{datef[1]}}.{{datef[0]|slice(2,2)}}</span>
-					<span class='reportTitle'>{{reports[3].viewBag.title}}</span>
-					<img src="/cadizturismo/storage/app/media/uploaded-files/templates/reportlineyellow.png" alt="">
-					<span class='reportDescrptn'>{{reports[3].viewBag.descrptn|length > 233 ? reports[3].viewBag.descrptn|slice(0, 234) ~ '...' : reports[3].viewBag.descrptn}}</span>
-				</div>
+				<a href='{{preurl~"/"~lang~reports[3].viewBag.url}}'>
+					<div class="rprInfCont">
+						{% set dated = reports[3].viewBag.dateReportaje|split(' ')[0] %}
+						{% set datef = dated|split('-') %}
+						<span class='reportDate'>{{datef[2]}}.{{datef[1]}}.{{datef[0]|slice(2,2)}}</span>
+						<span class='reportTitle'>{{reports[3].viewBag.title}}</span>
+						<img src="/cadizturismo/storage/app/media/uploaded-files/templates/reportlineyellow.png" alt="">
+						<span class='reportDescrptn'>{{reports[3].viewBag.descrptn|length > 233 ? reports[3].viewBag.descrptn|slice(0, 234) ~ '...' : reports[3].viewBag.descrptn}}</span>
+					</div>
+				</a>
 			</div>
 		{% endif %}	
 		</div>
 	{% endif %}
 	<div class="gr gr3">
-		<div class="rprtc5">5</div>
-		{% if(reports[4]) %}
-		<div class="rprtc6">
-			<div class="rprtc6 rpart1" style="background-image: url({{reports[4].viewBag.cover}});">
-				<div class="rprInfCont">
-					{% set dated = reports[4].viewBag.dateReportaje|split(' ')[0] %}
-					{% set datef = dated|split('-') %}
-					<span class='reportDate'>{{datef[2]}}.{{datef[1]}}.{{datef[0]|slice(2,2)}}</span>
-					<span class='reportTitle'>{{reports[4].viewBag.title}}</span>
-					<img src="/cadizturismo/storage/app/media/uploaded-files/templates/reportlineyellow.png" alt="">
-				</div>
-			</div>
-			<div class="rprtc6 rpart2">
-				<div class="rprInfCont">
-					<span class='reportDescrptn'>{{reports[4].viewBag.descrptn|length > 243 ? reports[4].viewBag.descrptn|slice(0, 244) ~ '...' : reports[4].viewBag.descrptn}}</span>
-				</div>
-			</div>
+		<div class="rprtc5">
+			CONOCE CÁDIZ EN REPORTAJES
+			<img src="/cadizturismo/storage/app/media/uploaded-files/templates/reportlineyellow2.png" alt="">
 		</div>
-		{% endif %}
+		
+		<div class="rprtc6">
+			{% if(reports[4]) %}
+			<a href='{{preurl~"/"~lang~reports[4].viewBag.url}}'>
+				<div class="rprtc6 rpart1" style="background-image: url({{reports[4].viewBag.cover}});">
+					<div class="rprInfCont">
+						{% set dated = reports[4].viewBag.dateReportaje|split(' ')[0] %}
+						{% set datef = dated|split('-') %}
+						<span class='reportDate'>{{datef[2]}}.{{datef[1]}}.{{datef[0]|slice(2,2)}}</span>
+						<span class='reportTitle'>{{reports[4].viewBag.title}}</span>
+						<img src="/cadizturismo/storage/app/media/uploaded-files/templates/reportlineyellow.png" alt="">
+					</div>
+				</div>
+				<div class="rprtc6 rpart2">
+					<div class="rprInfCont">
+						<span class='reportDescrptn'>{{reports[4].viewBag.descrptn|length > 243 ? reports[4].viewBag.descrptn|slice(0, 244) ~ '...' : reports[4].viewBag.descrptn}}</span>
+					</div>
+				</div>
+			</a>
+			{% endif %}
+			<div class="rprtc6 rpart3">
+				<a href='{{preurl~"/"~lang}}/todos-los-reportajes'>Todos los reportajes<img src="{{preurl}}/storage/app/media/uploaded-files/templates/link-icon.svg" alt=""></a>
+			</div>
+			
+		</div>		
 	</div>
 </div>
 
